# search-index-submitter

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  启动工具.command
.github/workflows/: build-android.yml  build-desktop.yml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jackeycloud/searchindexsubmitter/: HistoryStore.java  MainActivity.java  UrlExtractor.java
android/app/src/main/res/values/: styles.xml
android/app/src/test/java/com/jackeycloud/searchindexsubmitter/: UrlExtractorTest.java
assets/: app-icon.icns
codex-skill/submit-new-site-indexing/: SKILL.md
codex-skill/submit-new-site-indexing/agents/: openai.yaml
codex-skill/submit-new-site-indexing/references/: platforms.md
codex-skill/submit-new-site-indexing/scripts/: submit_sites.py
docs/: Android版使用与账号连接说明.md  搜索引擎一键提交工具_商业价值分析.md  搜索引擎一键提交工具_用户配置与使用指南.md  桌面版安装与首次打开.md
src/search_submitter/: __init__.py  cli.py  config.py  discovery.py  engine.py  gui.py  history.py  http.py  index_check.py  models.py  targets.py
src/search_submitter/providers/: __init__.py  baidu.py  base.py  bing.py  google.py  indexnow.py  manual.py  yandex.py
tests/: test_engine.py  test_history.py  test_providers.py  test_targets.py
