[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "search-index-submitter"
version = "0.1.0"
description = "Batch-submit new sites and sitemaps to supported search engines"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.7,<6.9; python_version < '3.10'",
  "PySide6>=6.7,<7; python_version >= '3.10'",
  "google-api-python-client>=2.130,<3",
  "google-auth-oauthlib>=1.2,<2",
]

[project.scripts]
search-index-submit = "search_submitter.cli:main"
search-index-submitter = "search_submitter.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
